--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,6 @@ defaultContentLanguage = "en"
 ignorefiles = [ "hugo_travis_ci", ".travis.yml" ]
 
 [params]
-    shortbio = "Economic PhD Candidate, Columbia University"
+    shortbio = "Economics PhD Candidate"
     shortbio1 = "Columbia University"
     logo = "kumar_headshot.jpg"
