--- a/data/working_papers/list.yaml
+++ b/data/working_papers/list.yaml
@@ -16,9 +16,9 @@ works:
 
 - title: "Infrastructure resilience against environmental shocks and economic effects of transport disruptions: Evidence from India "
   pdflink: "/pdf/trains.pdf"
-  book: "Vickrey Award for Best 3rd Year Paper, Runners up, Columbia University 2021"
+  note: "Vickrey Award for Best 3rd Year Paper, Runners up, Columbia University 2021"
 
 - title: "Can large scale conditional cash transfers resolve the fertility-sex ratio tradeoff?"
-  book: "Preliminary draft available upon request"
+  note: "Preliminary draft available upon request"
   abstract: >
       Currently, there are at least 15 conditional cash transfer schemes in India that aim to correct persisting gender inequalities arising out of a preference for sons in Indian families. Despite huge financial resources being pumped into these schemes, there is a lack of field-level monitoring and useful redressal mechanisms which make their impact un-clear. I evaluate a conditional cash transfer (CCT) scheme called Ladli Laxmi Yojana in Madhya Pradesh, India. I find financial incentives aimed at the girl child increased average fertility by about 0.157 children per couple and improved sex-ratio by about 0.034 points pointing to the well known fertility-sex ratio trade-off. These effects are quite opposite to a similar CCT scheme in Haryana (Anukriti 2018) suggesting context/path dependence of these policies.
