--- a/data/working_papers/list.yaml
+++ b/data/working_papers/list.yaml
@@ -16,7 +16,8 @@ works:
 
 - title: "Infrastructure resilience against environmental shocks and economic effects of transport disruptions: Evidence from India "
   pdflink: "/pdf/trains.pdf"
-  note: "Vickrey Award for Best 3rd Year Paper, Runners up, Columbia University 2021"
+  note: "Preliminary draft available upon request"
+  book: "Vickrey Award for Best 3rd Year Paper, Runners up, Columbia University 2021"
 
 - title: "Can large scale conditional cash transfers resolve the fertility-sex ratio tradeoff?"
   note: "Preliminary draft available upon request"
