--- a/data/work_in_progress/papers.yaml
+++ b/data/work_in_progress/papers.yaml
@@ -2,9 +2,20 @@ works:
 
 - title: "Politics and public sector productivity"
   coauthors: "Shreya Chandra"
+  abstract: >
+      There has been a longstanding debate on the role of public sector firms in economic development. 
+      We conduct an empirical investigation of the classical theoretical claim that public sector firms are often captured by political interests (Shleifer and Vishny 1994). 
+      We study the case of Indian railways - one of the world's largest public sector firms. 
+      Our empirical strategy combines rich election data with a novel output-based measure of productivity - namely train delays. 
+      We have webscraped travel times for millions of trips across the Indian railway network. 
+      Using closely contested elections as a source of plausibly random changes in political leaders across Indian constituencies, we plan to test whether (and how) politicians affect the operations of Indian railways. 
 
 - title: "Household sorting and willingness to pay for spatially concentrated environmental disamenities: A case of Delhi's trash mountains"
-  note: "UC Berkeley Diversity Fellowship (2022, 2023)"
+  note: "UC Berkeley Diversity Fellowship (2021, 2022)"
   coauthors: "Shreya Chandra"
+  abstract: >
+      TBD
 
 - title: "Optimal spatial distribution of economic activity in a changing climate"
+  abstract: >
+      TBD
