--- a/data/working_papers/list.yaml
+++ b/data/working_papers/list.yaml
@@ -27,8 +27,7 @@ works:
       Moving low-income and emerging market economies to the level of digital adoption in emerging and advanced economies, 
       respectively, improves education quality substantially and increases labor-force participation equivalent to 1.8 percent of GDP, largely driven by women.
 
-- title: "Infrastructure resilience against environmental shocks and economic effects of transport disruptions: Evidence from India"
-  note: "Slides available"
+- title: "Infrastructure resilience against environmental shocks and economic effects of transport disruptions: Evidence from India (Slides available)"
   book: "Vickrey Award for Best 3rd Year Paper, Runners up, Columbia University 2021"
   abstract: >
       I establish a causal link between the practice of crop-residue burning in India on disruptions in transport infrastructure using three independent causal inference techniques. 
