--- a/data/work_in_progress/papers.yaml
+++ b/data/work_in_progress/papers.yaml
@@ -3,7 +3,7 @@ works:
 - title: "Politics and public sector productivity"
   coauthors: "Shreya Chandra"
   abstract: >
-      There has been a longstanding debate on the role of public sector firms in economic development. 
+      There has been a long-standing debate on the role of public sector firms in economic development. 
       We conduct an empirical investigation of the classical theoretical claim that public sector firms are often captured by political interests (Shleifer and Vishny 1994). 
       We study the case of Indian railways - one of the world's largest public sector firms. 
       Our empirical strategy combines rich election data with a novel output-based measure of productivity - namely train delays. 
@@ -11,23 +11,17 @@ works:
       Using closely contested elections as a source of plausibly random changes in political leaders across Indian constituencies, we plan to test whether (and how) politicians affect the operations of Indian railways. 
 
 - title: "Household sorting and willingness to pay for spatially concentrated environmental disamenities: A case of Delhi's trash mountains"
-  note: "UC Berkeley Diversity Fellowship (2021, 2022)"
+  note: "UC Berkeley Economists for Equity Fellowship (2021, 2022)"
   coauthors: "Shreya Chandra"
   abstract: >
       Absent adequate urban planning, accelerated urbanization in developing countries can have severe consequences. 
       Lack of waste management in India has resulted in huge trash mountains in major urban areas including Delhi. 
       These overflowing landfill sites disproportionately affect the urban poor. 
-      Recent policy debates in Delhi have highlighted lack of public investment in cleaning up trash mountains. 
+      Recent policy debates in Delhi have highlighted the lack of public investment in cleaning up trash mountains. 
       But how much should the government invest in clearing up trash mountains? 
       This project aims to build a city-level willingness-to-pay measure using an urban spatial equilibrium model. 
       Using granular data from the Indian census, we aim to calibrate an urban model for Delhi and evaluate welfare improvements from counterfactual removal of three major trash mountains. 
       Monetized value of overall welfare gains will provide a measure of city-level willingness-to-pay to remove Delhi's trash mountains. 
 
 - title: "Optimal spatial distribution of economic activity in a changing climate"
-  abstract: >
-      I study how tropical countries can optimally allocate public resources to cities that are likely to be less affected by climate change: future sea-level rise and rising temperature. 
-      The project will have a model of spatial equilibrium where firms and workers optimally choose locations (cities) that maximize profits and utility, respectively, subject to moving costs. 
-      Public investment in a city (for example, in transport infrastructure) leads to higher productivity and amenities in the city; thereby attracting firms and workers (agglomeration forces). 
-      This influx of economic activity however gives rise to dispersion forces in the form of higher rents and congestion. 
-      Inundation due to sea level rise leads to unusable coastal land and infrastructure while increase in relative temperature leads to a decline in productivity at the city level.  
-      Optimal public investment portfolio across cities will be chosen to maximize long-run welfare subject to predicted impacts of climate change.
+  
